# neuroflix-hybrid-recommender

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: streamlit_app.py
data/results/: evaluation_results.json  evaluation_summary.txt  model_comparison.csv
src/: __init__.py  collaborative.py  content_based.py  data_pipeline.py  evaluation.py  hybrid.py  train_pipeline.py
