[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neuroflix"
version = "1.0.0"
description = "Production-grade Hybrid Movie Recommendation System"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mohit Raj"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort"]
